<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="always"
        android:title="Search" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_about" />
</menu>
